# python-aws-athena-s3

./: README.md  pyproject.toml
app/function-layer/m1/: .gitignore  pyproject.toml
app/function-layer/main/: Makefile
app/function/m1/src/: __init__.py  logging.conf.yml
app/function/m1/src/main/: index.py
app/function/m1/src/method/: __init__.py  get_table_layout_request.py  get_table_request.py  list_schemas_request.py  list_tables_request.py  ping_request.py
app/function/m1/src/subr/: __init__.py  pyarrow.py
deploy/cfn/: 090_application.yml
deploy/sh/: 090_application
