[tool.poetry]
name = "python-aws-athena-s3"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "python_aws_athena_s3"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.17"
pyarrow = "^12.0.1"
aws-lambda-powertools = "^2.22.0"
pyyaml = "^6.0.1"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
