[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
aws-lambda-powertools = "^2.22.0"
pyarrow = "^12.0.1"
pyyaml = "^6.0.1"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
